--- a/kitchensink.html
+++ b/kitchensink.html
@@ -108,14 +108,14 @@
 	 			<h3>MASTHEAD</h3>
 	 			<hr>
 	 			<section>
-	 			<div class="row masthead">
-	 				<div class="small-12 medium-10 medium-centered large-10 columns">
-	 					<h1>The most fun you'll have while getting CLE</h1>
-	 					<p>The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry's top conferences — educating, growing, and actively solving points of contention for lawyers and their clients.</p>
-	 					<p>The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry's top conferences — educating, growing, and actively solving points of contention for lawyers and their clients.</p>
-	 					<p>Contact us at <a href="#">conference@clio.com</a> to find out the status of CLE in your state.</p>
-	 				</div>
-	 			</div>
+		 			<div class="row masthead">
+		 				<div class="small-12 medium-10 medium-centered large-10 columns">
+		 					<h1>The most fun you'll have while getting CLE</h1>
+		 					<p>The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry's top conferences — educating, growing, and actively solving points of contention for lawyers and their clients.</p>
+		 					<p>The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry's top conferences — educating, growing, and actively solving points of contention for lawyers and their clients.</p>
+		 					<p>Contact us at <a href="#">conference@clio.com</a> to find out the status of CLE in your state.</p>
+		 				</div>
+		 			</div>
 	 			</section>
 	 			<br>
 	 			<h3>TESTIMONIALS</h3>
@@ -191,6 +191,53 @@
 		 				
 		 				<a href="" class="dashed small">Learn more</a>
 	 				</div>
+	 			</section>
+				<br><br>
+	 			<h3>COPY BLOCK</h3>
+	 			<hr>
+	 			<section>
+	 				<div class="row">
+		 				<div class="small-12 medium-10 medium-centered large-10 columns">
+			 				<div class="copy-block">
+			 					<h1>The most fun you'll have while getting CLE</h1>
+			 					<p class="small">The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry's top conferences — educatin g, growing, and actively solving points of contention for lawyers and their clients.</p>
+			 					<div>
+			 						<img src="http://placehold.it/290x290" alt="" class="rounded">
+			 					</div>
+			 					<a href="" class="btn btn--pill">Do I look like a pill?</a>
+			 					<p>Contact us at <a href="#">conference@clio.com</a> to find out the status of CLE in your state.</p>
+			 					<a href="" class="btn btn--ghost">Ghost button</a>
+							  	<ul class="text-left">
+							  		<li>Admission to all Clio Cloud Conference keynote and track sessions.</li>
+							  		<li>Access to all Ex Parte sessions, including 1:1 support at the Clio Smart Bar and direct access to our Product Team in the Clio Lab.</li>
+							  		<li>Access to a range of exhibitors who offer solutions tailored to suit the needs of the legal industry.</li>
+							  		<li>Gourmet breakfast, lunch, snacks, and beverages throughout the conference.</li>
+							  	</ul>
+								<p class="text-center"><a href="" class="small dashed">Terms, Conditions, and Cancellation Policy</a></p>
+			 				</div>
+		 				</div>
+		 			</div>
+	 			</section>
+				<h3>COPY BLOCK LEFT ALIGNED</h3>
+	 			<hr>
+	 			<section>
+	 				<div class="row">
+		 				<div class="small-12 medium-10 medium-centered large-10 columns">
+			 				<div class="copy-block text-left">
+			 					<h1>The most fun you'll have while getting CLE</h1>
+			 					<p class="small">The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry's top conferences — educating, growing, and actively solving points of contention for lawyers and their clients.</p>
+			 					<p>Contact us at <a href="#">conference@clio.com</a> to find out the status of CLE in your state.</p>
+			 					<a href="" class="btn btn--ghost">Ghost button</a>
+							  	<ul>
+							  		<li>Admission to all Clio Cloud Conference keynote and track sessions.</li>
+							  		<li>Access to all Ex Parte sessions, including 1:1 support at the Clio Smart Bar and direct access to our Product Team in the Clio Lab.</li>
+							  		<li>Access to a range of exhibitors who offer solutions tailored to suit the needs of the legal industry.</li>
+							  		<li>Gourmet breakfast, lunch, snacks, and beverages throughout the conference.</li>
+							  	</ul>
+							  	<p class="text-center"><a href="" class="small dashed">Terms, Conditions, and Cancellation Policy</a></p>
+			 				</div>
+		 				</div>
+		 			</div>
 	 			</section>
 	 			
 	 			<h3>FOOTER</h3>
