--- a/index.html
+++ b/index.html
@@ -144,118 +144,123 @@
 						<p>The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry's top conferences — educating, growing.</p>
 					</div>
 				</div>
-				<div class="row small-up-2 medium-up-3 large-up-5 speakers">
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
-						</div>
-					</div>
-					<div class="column speaker">
-						<div class="speaker--image">
-							<img src="http://placehold.it/120x170" alt="" width="120" height="170">
-						</div>
-						<div class="speaker--name">
-							Morgan Freeman
-						</div>
-						<div class="speaker--title">
-							Senior Lorem Ipsum, LIPSUM CO.
+				<div class="row">
+					<div class="small-12 medium-10 medium-centered large-10 columns">
+						<div class="row small-up-2 medium-up-3 large-up-5 speakers">
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
+							<div class="column speaker">
+								<div class="speaker--image">
+									<img src="http://placehold.it/120x170" alt="" width="120" height="170">
+								</div>
+								<div class="speaker--name">
+									Morgan Freeman
+								</div>
+								<div class="speaker--title">
+									Senior Lorem Ipsum, LIPSUM CO.
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
+
 
 				<a href="" class="btn btn--ghost">Learn more about speakers</a>
 			</section>
