--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 							<h1>Clio Cloud <br>Conference 2016</h1>
 							<h2>September 19 & 20 <br>CHICAGO &bull; RADISSON BLU</h2>
 							<hr>
-							<p class="small">The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry’s top conferences.</p>
+							<div class="blurb">
+								<p class="small">The Clio Cloud Conference brings together the best and brightest from the legal, business, and technology worlds for one of the industry’s top conferences.</p>
+							</div>
 							<a href="" class="btn btn--ghost">Register now</a>
 						</div>
 
@@ -346,64 +348,67 @@
 						<h1>Thanks to our sponsors  </h1>
 					</div>
 				</div>
-				<div class="row small-up-1 medium-up-2 large-up-3 premium">
-					<div class="column">
-						<img src="http://placehold.it/355x155" alt="">
+				<div class="row masthead">
+					<div class="small-10 small-centered medium-10 large-10 columns">
+						<div class="row small-up-1 medium-up-2 large-up-3">
+							<div class="column">
+								<img src="http://placehold.it/355x155" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/355x155" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/355x155" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/355x155" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/355x155" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/355x155" alt="">
+							</div>
+						</div>
+						<div class="row small-up-2 medium-up-4 large-up-6">
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+							<div class="column">
+								<img src="http://placehold.it/165x75" alt="">
+							</div>
+						</div>
 					</div>
-					<div class="column">
-						<img src="http://placehold.it/355x155" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/355x155" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/355x155" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/355x155" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/355x155" alt="">
-					</div>
-				</div>
-				<div class="row small-up-2 medium-up-4 large-up-6">
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-					<div class="column">
-						<img src="http://placehold.it/165x75" alt="">
-					</div>
-
 				</div>
 			</section>
 
