--- a/agenda.html
+++ b/agenda.html
@@ -110,7 +110,7 @@
 	                           		<div class="small-8 columns session">
 	                             		<h3>{{sessionItem.name}}</h3>
 																	<a class="btn" ng-click="isVisible = !isVisible">Show more</a>
-	                             		<p ng-show="isVisible">{{sessionItem.desc}}</p>
+	                             		<p class="text-left" ng-show="isVisible">{{sessionItem.desc}}</p>
 	                             	</div>
 	                            </div>
                         </div>
